--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
         
 </head>
 <body>
+    <!--ryjutyuip[i9i]-->
     <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
         <div class="container">
             <div class="navbar-header">
